# demoji

./: .coveragerc  .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: security-issue.md
.github/workflows/: ci.yml  publish.yml
demoji/: __init__.py  __main__.py  codes.json  main.py
requirements/: base.txt  dev.txt
scripts/: download_codes.py
src/demoji/: __init__.py  __main__.py  codes.json  main.py
tests/: test_cli.py  test_demoji.py
