[metadata]
author = Brad Solomon
author_email = bsolomon@protonmail.com
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Topic :: Text Processing
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
description = Accurately remove and replace emojis in text strings
keywords =
    emoji
    emojis
    nlp
    natural langauge processing
    unicode
license = Apache-2.0
license_file = LICENSE
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
name = demoji
project_urls =
    Source = https://github.com/bsolomon1124/demoji
    Documentation = https://github.com/bsolomon1124/demoji/blob/master/README.md
    Bug Reports = https://github.com/bsolomon1124/demoji/issues
url = https://github.com/bsolomon1124/demoji
version = attr:demoji.__version__

[options]
packages =
    demoji
install_requires =
    colorama
    requests<3.0.0
python_requires= >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires =
    pytest-runner
tests_require = 
    pytest

[bdist_wheel]
universal=1

[tool:pytest]
testpaths =
    tests
