[metadata]
author = Brad Solomon
author_email = bsolomon@protonmail.com
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Topic :: Text Processing
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
description = Accurately remove and replace emojis in text strings
keywords =
    emoji
    emojis
    nlp
    natural langauge processing
    unicode
license = Apache-2.0
license_file = LICENSE
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
name = demoji
project_urls =
    Source = https://github.com/bsolomon1124/demoji
    Documentation = https://github.com/bsolomon1124/demoji/blob/master/README.md
    Bug Reports = https://github.com/bsolomon1124/demoji/issues
url = https://github.com/bsolomon1124/demoji
version = attr:demoji.__version__

[options]
packages =
    demoji
include_package_data = True
install_requires =
    importlib_resources;python_version<"3.7"
python_requires = >=3.6
setup_requires =
    pytest-runner
tests_require = 
    pytest

[options.extras_require]
ujson = ujson

[tool:pytest]
testpaths =
    tests
